# service-mesh-academy

./: .gitignore  Makefile  README.md  build-index.py  deploy-emojivoto.sh  values-ha.yaml
2-15-features/: .gitignore  README.md  crunch-metrics.py  job.yaml  k3d-multizone.yaml  make-control-plane.py  make-identity-secret.py
2-15-mesh-expansion/: BEL-DOCKER.md  DEMO-DOCKER.md  DEMO-IOT.md  Dockerfile.demo-bel-external-base  Dockerfile.demo-external-base  LICENSE  Makefile  README.md
2-16-features/: README.md  choose-ipam.py  setup.sh
2-17-features/: README.md  clusters.yaml  cycle-clusters.sh  deinit.sh  init.sh  metrics.md  metrics.py  setup-network.sh
2-18-features/: README.md  localcluster  setup-base.sh  setup-network.sh
2.12-policy/: README.md
IPv6/: .gitignore  README.md  choose-ipam.py  get_info.py
aws/: .gitignore  README.md
certificate-management/: README.md  auto-setup.sh  manual-setup.sh
certificates-with-vault/: .gitignore  README.md
deploying-bel-with-hazl/: README.bak.md  README.md  bel-demo-full-repo.sh  bel-demo-install.sh
dynamic-routing-and-circuit-breaking/: README.md  create-cluster.sh  setup-demo.sh
eliminate-cross-zone-traffic-hazl/: README-orig.md  README.md  bel-demo-full-repo.sh  buoyant-cloud-metrics.yaml  cluster_destroy.sh  cluster_setup.sh  enable-metrics.md  enable-outbound-metrics.md  old-demo.md  orders  orders-sp.yaml  orders-topo  traffic_check.sh
gateway-api/: ANA.md  (+2 more)
kubecon-controller/: Cargo.toml  README.md
kubecon-controller/manifests/: wk.yaml
kubecon-controller/src/: controller.rs  lib.rs  workload.rs
(+477 files in other folders)
